
                   Rakeflurry 0.8.3
                   Release Notes

--------------------
0.8.3
- add backup_localdata shell 

0.8.2
- #6 : hadoop failover support 
- change dev server.
- support new cluster in ilsan.

0.8.1
- #5 : a trans. for overwriting keymap.

0.8.0
- #4 : add monthly api
- add info.txt
- add version to mail report.

0.7.1
- #1 fixed : When flurry doesn't return 200 and return data is not valid json, exact exception is not delivered.
- #2 fixed : When multi execution failed, alerting mail returns success.
- #3 fixed : when muti execution, duplicated url requested.

0.7.0
- collecting data by multi-thread. 

0.6.1
- minor build change.

0.6.0
- add showapi flag : remove api's detailed result when show jobs.
- add recovery service : recover previous errored jobs. 
- add recovery flag : show include recovery jobs, add dashboard's field that means recovery for whom.   

0.5.0
- remove all keymap table when overwriting
- change conn pool to c3p0 for validation check.
- alert when job failed and finished.
- divide config to default and real mode.

0.4.0
- PK changed : accessCode to mbrNo
- show jobs service added.
- many service can use dashboard class.
- add user management.
- data file copy to hdfs. hadoop 2.0.0-alpha

0.3.0
- keymap service: show, update
- collect service except using hadoop

0.2.0
- construct dev env. 
- hibernate env.

0.1.0
- make build template.
