@@ -1,0 +1,61 @@
+/*
+SQLyog Community v10.1 Beta1
+MySQL - 5.5.21 : Database - querypicus
+*********************************************************************
+*/
+
+/*!40101 SET NAMES utf8 */;
+
+/*!40101 SET SQL_MODE=''*/;
+
+/*!40014 SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */;
+/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
+/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;
+CREATE DATABASE /*!32312 IF NOT EXISTS*/`querypicus` /*!40100 DEFAULT CHARACTER SET utf8 */;
+
+USE `querypicus`;
+
+/*Table structure for table `tb_perf` */
+
+DROP TABLE IF EXISTS `tb_perf`;
+
+CREATE TABLE `tb_perf` (
+  `perf_id` int(11) NOT NULL AUTO_INCREMENT,
+  `tps` double DEFAULT NULL,
+  `avg_resp` bigint(20) DEFAULT NULL,
+  `total_elapsed` double DEFAULT NULL,
+  `total_count` bigint(20) DEFAULT NULL,
+  `resp_interval` varchar(128) DEFAULT NULL,
+  `server` varchar(128) DEFAULT NULL,
+  `total_record_count` bigint(20) DEFAULT '0',
+  `total_error_count` bigint(20) DEFAULT '0',
+  `update_time` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  PRIMARY KEY (`perf_id`),
+  KEY `idx_update_time` (`update_time`)
+) ENGINE=InnoDB AUTO_INCREMENT=66086 DEFAULT CHARSET=utf8
+/*!50100 PARTITION BY RANGE (perf_id)
+(PARTITION p0 VALUES LESS THAN (1000000) ENGINE = InnoDB,
+ PARTITION p1 VALUES LESS THAN (2000000) ENGINE = InnoDB,
+ PARTITION p2 VALUES LESS THAN (3000000) ENGINE = InnoDB,
+ PARTITION p3 VALUES LESS THAN (4000000) ENGINE = InnoDB,
+ PARTITION p4 VALUES LESS THAN (5000000) ENGINE = InnoDB,
+ PARTITION p5 VALUES LESS THAN (6000000) ENGINE = InnoDB,
+ PARTITION p6 VALUES LESS THAN (7000000) ENGINE = InnoDB,
+ PARTITION p7 VALUES LESS THAN (8000000) ENGINE = InnoDB,
+ PARTITION p8 VALUES LESS THAN (9000000) ENGINE = InnoDB,
+ PARTITION p9 VALUES LESS THAN (10000000) ENGINE = InnoDB,
+ PARTITION p10 VALUES LESS THAN (11000000) ENGINE = InnoDB,
+ PARTITION p11 VALUES LESS THAN (12000000) ENGINE = InnoDB,
+ PARTITION p12 VALUES LESS THAN (13000000) ENGINE = InnoDB,
+ PARTITION p13 VALUES LESS THAN (14000000) ENGINE = InnoDB,
+ PARTITION p14 VALUES LESS THAN (15000000) ENGINE = InnoDB,
+ PARTITION p15 VALUES LESS THAN (16000000) ENGINE = InnoDB,
+ PARTITION p16 VALUES LESS THAN (17000000) ENGINE = InnoDB,
+ PARTITION p17 VALUES LESS THAN (18000000) ENGINE = InnoDB,
+ PARTITION p18 VALUES LESS THAN (19000000) ENGINE = InnoDB,
+ PARTITION p19 VALUES LESS THAN (20000000) ENGINE = InnoDB,
+ PARTITION p20 VALUES LESS THAN MAXVALUE ENGINE = InnoDB) */;
+
+/*!40101 SET SQL_MODE=@OLD_SQL_MODE */;
+/*!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */;
+/*!40111 SET SQL_NOTES=@OLD_SQL_NOTES */;
